pod-with-pv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2
  labels:
    app: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx2
        image: nginx:1.16
        ports:
        - containerPort: 80
      volumes:
      - name: my-volume
        persistentVolumeClaim:
          claimName: my-pvc
